--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ h3 {
     margin: 100px auto;   
 }
 .future .wrapper {    
-    margin: auto;
+    margin: 50px;
 }
 .future .event-1 {
     width: 289px;
