--- a/styles/style.css
+++ b/styles/style.css
@@ -60,7 +60,7 @@ h3 {
     margin: 100px auto;   
 }
 .future .wrapper {    
-    margin: 50px;
+    margin: 50px 0px;
 }
 .future .event-1 {
     width: 289px;
